contination of homework

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -142,36 +142,36 @@
             <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="about__list">
                 <li class="about__list__item">
-                    <img src="./imagine/ellipse1.svg" alt="icon">
-                    <h3>Thoughtful Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    <img class="about__icon" src="./imagine/ellipse1.svg" alt="icon">
+                    <h3 class="about__header2">Thoughtful Design</h3>
+                    <p class="about__item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </li>
                 <li class="about__list__item">
-                    <img src="./imagine/ellipse2.svg" alt="icon">
-                    <h3>Thoughtful Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    <img class="about__icon" src="./imagine/ellipse2.svg" alt="icon">
+                    <h3 class="about__header2">Thoughtful Design</h3>
+                    <p class="about__item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </li>
                 <li class="about__list__item">
-                    <img src="./imagine/ellipse3.svg" alt="icon">
-                    <h3>Thoughtful Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
+                    <img class="about__icon" src="./imagine/ellipse3.svg" alt="icon">
+                    <h3 class="about__header2">Thoughtful Design</h3>
+                    <p class="about__item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</p>
                 </li>
             </ul>
         </section>
 
         <!--Pricing options-->
         <section id="prise">
-            <h2>pricing options</h2>
+            <h2 class="prise__main-header">pricing options</h2>
             <hr class="line-light">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="prise__discription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
-        <div>
+        <div class="prise__box1">
             <div>
-                <h3>Basic</h3>
-                <p>$10</p>
-                <p>Free for life</p>
+                <h3 class="prise__box__header">Basic</h3>
+                <p class="prise__box__prise">$10</p>
+                <p class="prise__box__text">Free for life</p>
             </div>
-            <ul>
+            <ul class="prise__box__list">
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
@@ -180,13 +180,13 @@
                 <li>1 gb of space</li>
             </ul>
         </div>
-        <div>
+        <div class="prise__box1">
             <div>
-                <h3>Optima</h3>
-                <p>$20</p>
-                <p>Free for life</p>
+                <h3 class="prise__box__header">Optima</h3>
+                <p class="prise__box__prise">$20</p>
+                <p class="prise__box__prise">Free for life</p>
             </div>
-            <ul>
+            <ul class="prise__box__list">
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
@@ -195,13 +195,13 @@
                 <li>1 gb of space</li>
             </ul>
         </div>
-        <div>
+        <div class="prise__box1">
             <div>
-                <h3>Pro</h3>
+                <h3 class="prise__box__header">Pro</h3>
                 <p>$30</p>
                 <p>Free for life</p>
             </div>
-            <ul>
+            <ul class="prise__box__list">
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
                 <li>1 gb of space</li>
