--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -11,23 +11,23 @@
 
 <body>
     <header class="menu">
-        <nav class="conteiner">
-            <a href="" ><img class="menu__logo" src="./imagine/AXITlogo.svg" alt="logo"></a>
+        <nav class="container">
+            <a href="" ><img class="menu_logo" src="./imagine/AXITlogo.svg" alt="logo"></a>
             <ul class="menu__list">
-                <li class="menu__list__item">
-                    <a class="menu__list__link" href="#tabs">Features</a>
+                <li class="menu_list_item">
+                    <a class="menu_list_link" href="#tabs">Features</a>
                 </li>
-                <li class="menu__list__item">
-                    <a class="menu__list__link" href="#about">About</a>
+                <li class="menu_list_item">
+                    <a class="menu_list_link" href="#about">About</a>
                 </li>
-                <li class="menu__list__item">
-                    <a class="menu__list__link" href="#prise">Pricing</a>
+                <li class="menu_list_item">
+                    <a class="menu_list_link" href="#prise">Pricing</a>
                 </li>
-                <li class="menu__list__item">
-                    <a class="menu__list__link" href="#reviews">Reviews</a>
+                <li class="menu_list_item">
+                    <a class="menu_list_link" href="#reviews">Reviews</a>
                 </li>
-                <li class="menu__list__item">
-                    <a class="menu__list__link" href="#contact">Contact</a>
+                <li class="menu_list_item">
+                    <a class="menu_list_link" href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -35,65 +35,64 @@
     
     <main>
         <!--Main banner-->
-        <section class="banner-dark">
-            <div class="conteiner">
-                <div class="banner__box1"> 
-                    <img class="banner__logo" src="./imagine/AXITlogo.svg" alt="logo">
-                    <h1 class="banner__header title1">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-                    <hr class="line-dark">
-                    <p class="banner__text title2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                    <a class="small-button clear-button button" href="./imagine/1594e3d231fed5eebf50de85c9ac6bd9.jpg" download>Download</a>
+        <section class="main-banner dark">
+            <div class="container">
+                <div class="banner_box1"> 
+                    <img class="banner_logo" src="./imagine/AXITlogo.svg" alt="logo">
+                    <h1 class="banner-title title1">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+                    <hr class="line light-line banner_line">
+                    <p class="banner_text title2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <a class="small-button clear-button button" href="" download>Download</a>
                 </div>
     
-                <div class="banner__box2">
-                    <h2 class="banner__box2__header title4">Try Your <span class="free">FREE</span> Trial Today</h2>
-                    <form class="banner__form" action="">
-                        <div class="banner__form__item">
-                            <label class="banner__form__name" for="nick">Name</label>
-                            <input class="banner__form__input" type="text" name="nick">
-                            <!--<hr class="form-line">-->
+                <div class="banner_box2">
+                    <h2 class="banner_box2_header title4">Try Your <span class="free">FREE</span> Trial Today</h2>
+                    <form class="banner_form" action="">
+                        <div class="banner_form_item">
+                            <label class="banner_form_name" for="nick">Name</label>
+                            <input class="banner_form_input" type="text" name="nick">
                         </div>
-                        <div class="banner__form__item">
-                            <label class="banner__form__name" for="e-mail">Email</label>
-                            <input class="banner__form__input" type="text" name="email">
+                        <div class="banner_form_item">
+                            <label class="banner_form_name" for="e-mail">Email</label>
+                            <input class="banner_form_input" type="text" name="email">
                         </div>
-                        <div class="banner__form__item">
-                            <label class="banner__form__name" for="password">Password</label>
-                            <input class="banner__form__input" type="password" name="password">
+                        <div class="banner_form_item">
+                            <label class="banner_form_name" for="password">Password</label>
+                            <input class="banner_form_input" type="password" name="password">
                         </div>
                     </form>
-                    <button class="button">Get started</button>
+                    <button class="button form_button">Get started</button>
                 </div>
             </div>
         </section>
 
         <!--Social Media-->
-        <section class="media-light">
-            <div class="conteiner">
-                <div class="media__box1">
-                    <h2 class="media__header title4">Social Media</h2>
-                    <p class="media__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+        <section class="media">
+            <div class="container">
+                <div class="media_box1">
+                    <h2 class="media_header title4">Social Media</h2>
+                    <p class="media_text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                 </div>
-                <ul class="media__list">
-                    <li class="media__list__item">
+                <ul class="media_list">
+                    <li class="media_list_item">
                         <img src="./imagine/fasebook.svg" alt="facebook">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                         <img src="./imagine/twitter.svg" alt="twitter">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                         <img src="./imagine/linkedin.svg" alt="linkedin">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                         <img src="./imagine/pinterest.svg" alt="pinterest">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                         <img src="./imagine/instagram.svg" alt="instagram">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                     <img src="./imagine/github.svg" alt="github">
                     </li>
-                    <li class="media__list__item">
+                    <li class="media_list_item">
                         <img src="./imagine/rss.svg" alt="rss">
                     </li>
                 </ul>
@@ -101,49 +100,49 @@
         </section>
 
         <!--Tabs-->
-        <section id="tabs">
-            <div class="conteiner">
-                <ul class="tabs__list">
-                    <li class="tabs__list__item">Tab1</li>
-                    <li class="tabs__list__item">Tab2</li>
-                    <li class="tabs__list__item">Tab3</li>
+        <section class="tabs" id="tabs">
+            <div class="container">
+                <ul class="tabs_list">
+                    <li class="tabs_list_item">Tab1</li>
+                    <li class="tabs_list_item">Tab2</li>
+                    <li class="tabs_list_item">Tab3</li>
                 </ul>
-                <div class="tabs__main-box1">
-                    <div class="tabs__box">
-                        <h3 class="tabs__box__header">Tabs with soft transitioning effect.</h3>
-                        <p class="tabs__box__text1 title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                <div class="tabs_main-box1">
+                    <div class="tabs_box">
+                        <h3 class="tabs_box_header title3">Tabs with soft transitioning effect.</h3>
+                        <p class="tabs_box_text1 title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                             bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
                             justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
                             penatibus et magnis dis parturient montes.</p>
-                        <p class="tabs__box__text2 title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
-                    <a class="small-button color-button button" href="./imagine/1594e3d231fed5eebf50de85c9ac6bd9.jpg" download>Download</a>
+                        <p class="tabs_box_text2 title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                    <a class="small-button color-button button" href="" download>Download</a>
                     </div>
-                    <img class="tabs__img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
+                    <img class="tabs_img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
                 </div>
-                <div class="tabs__main-box2">
-                    <div class="tabs__box">
-                        <h3 class="tabs__box__header">tab2</h3>
-                        <p class="tabs__box__text1 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
-                        <p class="tabs__box__text2 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
-                        <a class="small-button color-button button" href="./imagine/1594e3d231fed5eebf50de85c9ac6bd9.jpg" download>Download</a>
+                <div class="tabs_main-box2">
+                    <div class="tabs_box">
+                        <h3 class="tabs_box_header title3">tab2</h3>
+                        <p class="tabs_box_text1 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
+                        <p class="tabs_box_text2 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
+                        <a class="small-button color-button button" href="" download>Download</a>
                     </div>
-                    <img class="tabs__img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
+                    <img class="tabs_img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
                 </div>
-                <div class="tabs__main-box3">
-                    <div class="tabs__box">
-                        <h3 class="tabs__box__header">tab2</h3>
-                        <p class="tabs__box__text1 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
-                        <p class="tabs__box__text2 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
-                        <a class="small-button color-button button" href="./imagine/1594e3d231fed5eebf50de85c9ac6bd9.jpg" download>Download</a>
+                <div class="tabs_main-box3">
+                    <div class="tabs_box">
+                        <h3 class="tabs_box_header title3">tab2</h3>
+                        <p class="tabs_box_text1 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
+                        <p class="tabs_box_text2 title5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, nesciunt!</p>
+                        <a class="small-button color-button button" href="" download>Download</a>
                     </div>
-                        <img class="tabs__img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
+                        <img class="tabs_img" src="./imagine/Rectangle 111111.png" alt="statue of liberty">
                 </div>
             </div>
         </section>
 
         <!--About-->
         <section id="about">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="about__header title2">WHY THIS IS AWESOME</h2>
                 <hr class="line-light">
                 <p class="about__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -170,9 +169,9 @@
         <!--Pricing options-->
         <!-- размер текста на цене больше-->
         <section id="prise">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="title2">pricing options</h2>
-                <hr class="line-light">
+                <hr class="color-line line">
                 <p class="title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                 <div>
@@ -225,9 +224,9 @@
 
         <!--Review-->
         <section id="reviews">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="title2">what our customers are saying</h2>
-                <hr class="line-light">
+                <hr class="color-line line">
                 <p class="title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <ul>
                     <li>
@@ -274,20 +273,20 @@
         </section>
 
         <!--STYLISH AXURE DESIGN-->
-        <section class="section-dark">
-            <div class="conteiner">
+        <section class="dark">
+            <div class="container">
                 <h2 class="title2">STYLISH AXURE DESIGN</h2>
-                <hr class="line-dark">
+                <hr class="line light-line">
                 <p class="title5">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
-                <a class="button big-button clear-button" href="./imagine/1594e3d231fed5eebf50de85c9ac6bd9.jpg" download>Download the picture "kitten in sunglasses"</a>
+                <a class="button big-button clear-button" href="" download>Download</a>
             </div>
         </section>
 
         <!--Contact form-->
         <section id="contact">
-            <div class="conteiner">
+            <div class="container">
                 <h2 class="title2">contact us</h2>
-                <hr class="line-light">
+                <hr class="line color-line">
                 <p class="title5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 <form action="">
                     <label for="nick1">Name</label>
@@ -300,7 +299,7 @@
                     <input type="text" name="password1" size="40">
 
                     <label for="message">Message</label>
-                    <input type="text" name="message" size="200">
+                    <input type="text" name="message" size="40">
                 </form>
                 <button class="button big-button color-button">Send message</button>
                 </div>
@@ -308,7 +307,7 @@
     </main>
 
     <footer>
-        <div class="conteiner">
+        <div class="container">
             <ul>
                 <li>
                     <img src="imagine/fasebook.svg" alt="facebook">
