--- a/index.html
+++ b/index.html
@@ -1,227 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>ActiveBox</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <title>Homework1</title>
 </head>
-
 <body>
-  <header>
-    <nav>
-      <a href="">
-        <img src="./images/logo.svg" alt="ActiveBox">
-      </a>
-      <ul>
-        <li><a href="">features</a></li>
-        <li><a href="">works</a></li>
-        <li><a href="">our team</a></li>
-        <li><a href="">testimonials</a></li>
-        <li><a href="">download</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!--Site1-->
+    <div>
+        <p>Site 1</p> <br>
+        <a href="https://movi.by/">Movi</a><br>
+        <img src="./img/movi1.png" alt="movi1"><br>
+        <img src="./img/movi2.png" alt="movi2">
+    </div>
 
-  <main>
+    <!--Site2-->
+    <div>
+        <p>Site 2</p> <br>
+        <a href="https://webref.ru/">Webref</a><br>
+        <img src="./img/webref1.png" alt="webref1"><br>
+        <img src="./img/webref2.jpg" alt="webref2"><br>
+        <img src="./img/webref3.jpg" alt="webref3"><br>
+        <img src="./img/webref4.png" alt="webref4"><br>
+    </div>
 
-    <!-- Main baner -->
-    <section>
-      <h1>Your Favorite One Page Multi Purpose Template</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna
-        vel scelerisque nisl consectetur et.</p>
-      <a href="#0">Find Out More</a>
-    </section>
+    <!--Site3-->
+    <div>
+        <p>Site 3</p> <br>
+        <a href="https://dictionary.cambridge.org/ru/">Cambridge Dicionary<a><br>
+        <img src="./img/CD1.jpg" alt="CD1"><br>
+        <img src="./img/CD2.jpg" alt="CD2"><br>
+        </div>
 
-    <!-- advantage -->
-    <section>
-      <h2 hidden>advantage</h2>
-      <ul class="advantage">
-        <li class="advantage__list">
-          <img class="advantage__list__img" src="./images/icons/icon_1.svg" alt="">
-          <h3 class="advantage__list__text3">Easily Customised</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
-        <li>
-          <img class="advantage__list__img" src="./images/icons/icon_2.svg" alt="">
-          <h3 class="advantage__list__text3">Responsive REady</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
+    <!--Site4-->
+    <div>
+        <p>Site 4</p> <br>
+        <a href="https://www.alfabank.by/">AlfaBank<a><br>
+        <img src="./img/alfabank1.png" alt="alfabank1"><br>
+        <img src="./img/alfabank2.png" alt="alfabank2"><br>
+        <img src="./img/alfabank3.png" alt="alfabank3">
+    </div>    
 
-        <li>
-          <img class="advantage__list__img" src="./images/icons/icon_3.svg" alt="">
-          <h3 class="advantage__list__text3">Modern Design</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
-
-        <li>
-          <img class="advantage__list__img" src="./images/icons/icon_4.svg" alt="">
-          <h3 class="advantage__list__text3">Clean Code</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
-
-        <li>
-          <img class="advantage__list__img" src="./images/icons/icon_5.svg" alt="">
-          <h3 class="advantage__list__text3">Ready to Ship</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
-
-        <li>
-          <img class="advantage__list__img" src="./images/icons/icon_6.svg" alt="">
-          <h3 class="advantage__list__text3">Download for Free</h3>
-          <p class="advantage__list__textp">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel
-            eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
-        </li>
-      </ul>
-    </section>
-
-    <!-- Projects -->
-    <section>
-      <h2 hidden>Projects</h2>
-      <div class="">
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-        <div class="">
-          <img src="" alt="">
-          <div class="">
-            <h3>Project Name</h3>
-            <p>User Interface Design</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Team -->
-    <section>
-      <h2 hidden>Team</h2>
-      <div class="">
-        <div class="">
-          <img src="./images/Team1.jpg" alt="">
-          <h3>Ruth woods</h3>
-          <span>founder, ceo</span>
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
-            risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
-            ornare vel eu leo.</p>
-          <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-          </ul>
-        </div>
-        <div class="">
-          <img src="./images/Team2.jpg" alt="">
-          <h3>Timothy Reed</h3>
-          <span>co-founder, developer</span>
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
-            risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
-            ornare vel eu leo.</p>
-          <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-          </ul>
-        </div>
-        <div class="">
-          <img src="./images/Team3.jpg" alt="">
-          <h3>Victoria Vladez</h3>
-          <span>ui designer</span>
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
-            risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
-            ornare vel eu leo.</p>
-          <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-          </ul>
-        </div>
-        <div class="">
-          <img src="./images/Team4.jpg" alt="">
-          <h3>Beverly Little</h3>
-          <span>data scientist</span>
-          <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet
-            risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis
-            ornare vel eu leo.</p>
-          <ul>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2 hidden>Reviews</h2>
-      <div class="">
-        <img src="" alt="">
-        <div class="">
-          <blockquote>
-            “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo
-            quam...”
-          </blockquote>
-          <p>Susan Sims, Interaction Designer at XYZ</p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer></footer>
+        <!--Site5-->
+    <div>
+        <p>Site 5</p><br>
+        <a href="https://subtitry.su/4444-emili-v-parizhe.html">Subtitry<a><br>
+        <img src="./img/subtitry1.png" alt="subtitry1"><br>
+        <img src="./img/subtitry2.jpg" alt="subtitry2">
+    </div>
 </body>
-
 </html>
