--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header>
+  <header class>
     <nav>
       <a href="">
         <img src="./images/logo.svg" alt="ActiveBox">
