--- a/list/index.html
+++ b/list/index.html
@@ -7,8 +7,48 @@
     <title>List</title>
 </head>
 <body>
-    <div>
-        
+
+    <div class="container">
+        <div>
+            <ul class="unnumb-list">
+                <li class="unnumb-list__item"> 
+                    <span class="list__description">list 1</span>
+                </li>
+                <li class="unnumb-list__item"> 
+                    <span class="list__description">list 2</span>
+                </li>
+                <li class="unnumb-list__item"> 
+                    <span class="list__description"></span>list 3</span>
+                </li>
+                <li class="unnumb-list__item">
+                    <span class="list__description">list 4</span>
+                </li>
+                <li class="unnumb-list__item"> 
+                    <span class="list__description">list 5</span>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <ol class="numb-list">
+                <li class="numb-list__item"> 
+                    <span class="list__description">list 1</span>
+                </li>
+                <li class="numb-list__item"> 
+                    <span class="list__description">list 2</span>
+                </li>
+                <li class="numb-list__item"> 
+                    <span class="list__description"></span>list 3</span>
+                </li>
+                <li class="numb-list__item">
+                    <span class="list__description">list 4</span>
+                </li>
+                <li class="numb-list__item"> 
+                    <span class="list__description">list 5</span>
+                </li>
+            </ul>
+            </ol>
+        </div>
     </div>
 
 </body>
