add list and start picture

--- a/list/index.html
+++ b/list/index.html
@@ -18,7 +18,7 @@
                     <span class="list__description">list 2</span>
                 </li>
                 <li class="unnumb-list__item"> 
-                    <span class="list__description"></span>list 3</span>
+                    <span class="list__description">list 3</span>
                 </li>
                 <li class="unnumb-list__item">
                     <span class="list__description">list 4</span>
@@ -38,7 +38,7 @@
                     <span class="list__description">list 2</span>
                 </li>
                 <li class="numb-list__item"> 
-                    <span class="list__description"></span>list 3</span>
+                    <span class="list__description">list 3</span>
                 </li>
                 <li class="numb-list__item">
                     <span class="list__description">list 4</span>
