--- a/picture/index.html
+++ b/picture/index.html
@@ -2,14 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../picture/css/reset.css">
+  <link rel="stylesheet" href="../picture/css/style.css">
   <title>Picture</title>
 </head>
 <body>
-  <div>
-    
-  </div>
+  <div class="container">
+    <div class="sky">
+      <div class="rainbow">
+        <div class="rainbow__line red">
+          <div class="rainbow__line orange">
+            <div class="rainbow__line yellow">
+              <div class="rainbow__line green">
+                <div class="rainbow__line azure">
+                  <div class="rainbow__line blue">
+                    <div class="rainbow__line purple">
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="clouds">
+        <div class="cloud1">
+          <div class="circul1">
+          </div>
+
+          <div class="circul2">
+          </div>
+
+          <div class="circul3">
+          </div>
+
+          <div class="circul4">
+          </div>
+        </div>
+
+        <div class="cloud2">
+          <div class="circul1">
+          </div>
+
+          <div class="circul2">
+          </div>
+
+          <div class="circul3">
+          </div>
+
+          <div class="circul4">
+          </div>
+        </div>
+      </div>
+
+      <div class="sun">
+      </div>
+    </div>
+
+    <div class="earth">
+      <div class="ground">
+      </div>
+
+      <div class="house">
+      </div>
+
+      <div class="fence">
+      </div>
+
+      <div class="tree">
+      </div>
+    </div>
+
+    
+
+    <div class="water">
+    </div>
+  </div>
 </body>
 </html>
